--- a/src/main/resources/static/pages/vehicle.html
+++ b/src/main/resources/static/pages/vehicle.html
@@ -855,6 +855,7 @@
 
             <div class = "row">
                 <a th:href="@{/vehicles/new}" class = "btn btn-primary btn-sm mb-3" data-toggle="modal" data-target="#myModal">Add Vehicle</a>
+
             </div>
             <!-- The Modal -->
             <div class="modal" id="myModal">
@@ -869,7 +870,7 @@
 
                         <!-- Modal body -->
                         <div class="modal-body">
-                            <form th:action="@{/vehicles/new}" th:object="${vehicle}" method = "POST" >
+                            <form th:action="@{/vehicles}" th:object="${vehicle}" method = "POST" >
 
                                 <div class = "form-group">
                                     <label>Vehicle Name</label>
@@ -1273,6 +1274,21 @@
 
                     </table>
                 </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+<!--                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">Next</a></li>-->
+                    <li class="page-item" th:each="i: ${#numbers.sequence(beginIndex, endIndex)}">
+                        <a th:href="@{/vehicles(p=${i})}" th:text="${i}" class="nav-link"
+                            th:classappend="${currentPage}==${i}?'activepagenumber':''"></a>
+
+                    </li>
+                </ul>
+            </nav>
+
         </section>
 
 
